--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <img src="/public/img/buy-comics-digital-comics.png" alt="" />
   </body>
 </html>
